--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.11.3",
     "vue": "^3.2.37",
     "vue-router": "^4.1.6"
   },
