--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "flowbite": "^1.6.0",
     "gsap": "^3.11.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-cookies": "^1.0.6",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
